Improve VM on JDK9+, Fix duration computation in SQL